# bluetooth-sensor-state-data

./: .all-contributorsrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  usage.md
src/bluetooth_sensor_state_data/: __init__.py
tests/: test_init.py  test_main.py
